# werkudoro-ev

./: ARCHITECTURE.md  README.md  ROADMAP.md  SPECS.md  TODO.md  main.py  pyproject.toml
docs/: README.md  architecture.md  getting-started.md  hardware.md  ros2.md
docs/modules/: control.md  localization.md  perception.md  planning.md  simulation.md  vehicle.md
src/werkudoro/: __init__.py
src/werkudoro/control/: __init__.py  pid.py  pure_pursuit.py
src/werkudoro/localization/: __init__.py  ekf.py
src/werkudoro/perception/: __init__.py  lane_detection.py  object_detection.py
src/werkudoro/planning/: __init__.py  global_planner.py  local_planner.py
src/werkudoro/sim/: __init__.py  gazebo_interface.py
src/werkudoro/vehicle/: __init__.py  ackermann.py  model.py
