[project]
name = "werkudoro-ev"
version = "0.1.0"
description = "Autonomous Electric Vehicle — ROS 2 + Gazebo simulation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "opencv-python>=4.9",
    "ultralytics>=8.1",
    "torch>=2.2",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/werkudoro"]
